Products and Select Category no longer overlaps with header

--- a/public/style.css
+++ b/public/style.css
@@ -77,7 +77,6 @@ form div {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  align-items:center;
   justify-content:center;
 }
 .checkoutSidebar{
@@ -164,11 +163,9 @@ form div {
 }
 .allProductsHeader{
   position: absolute;
-  top: 200px;
   text-align: center;
-}
-.productContainerAllProductsEdit{
-  margin-top: 100px;
+  position: relative;
+  top: 10px;
 }
 /* -----------------------------Cart Styles ---------------------------------*/
 .cartSummary{
